--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,19 @@
+/*COMMON*/
 body {
-  color: #333;
+  font-family: 'Nanum Gothic', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
-  font-family: "Nanum Gothic", sans-serif;
-  
+  color: #333;
 }
-img{
-  display: block ;
-}
-
-a{
+a {
   text-decoration: none;
 }
+img {
+  /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
+  display: block;
+}
+
 /*INNER*/
 .inner {
   width: 1100px;
@@ -99,6 +100,7 @@ a{
 .show .back-to-position.delay-3 {
   transition-delay: .9s;
 }
+
 
 /*HEADER*/
 header {
@@ -264,6 +266,7 @@ header .badges .badge {
   box-shadow: 4px 4px 10px rgba(0,0,0,.15);
   cursor: pointer;
 }
+
 
 /*VISUAL*/
 .visual {
